<resources>
    <string name="app_name">Calculadora</string>
    <string name="textoInicio">0</string>
    <string name="buttonClear">C</string>
    <string name="signo">+/-</string>
    <string name="porcentaje">%</string>
    <string name="dividir">/</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="multip">*</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="punto">.</string>
    <string name="igual">=</string>

</resources>